
syntax = "proto3";

import "project01/hello/user.proto";

option go_package = "project01/hello";

message UserGroup {
  uint32 group_id = 1;
  string group_namwe = 2;
  repeated string roles = 3;
  repeated User users = 4;
  string description = 5;
}